feat: added none skill for error handling // tweaked some skills